--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=RackSystemApplication
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://rackdb.cml64asoo11n.us-east-1.rds.amazonaws.com:3306/rackdb
-spring.datasource.username=anjali
-spring.datasource.password=Database
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/rackdb
+spring.datasource.username=root
+spring.datasource.password=Jishnu@23
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
